# QEMUAppleSilicon

./: .clang-format  .gitignore  .gitmodules  Kconfig.host  Makefile  block.c  blockdev.c  configure  cpu-common.c  cpu-target.c  hmp-commands-info.hx  hmp-commands.hx  job.c  meson.build  meson_options.txt  page-vary-target.c  qemu-img.c  qemu-options.hx
accel/: accel-blocker.c  accel-common.c  accel-system.c  meson.build
accel/tcg/: atomic_common.c.inc  atomic_template.h  cpu-exec-common.c  cpu-exec.c  cputlb.c  internal-common.h  ldst_atomicity.c.inc  ldst_common.c.inc  meson.build  tb-internal.h  tb-maint.c  tcg-accel-ops-icount.c  tcg-accel-ops-mttcg.c  tcg-accel-ops-rr.c  tcg-all.c  tcg-stats.c  translate-all.c  translator.c
audio/: dbusaudio.c
backends/: hostmem-file.c  hostmem.c  iommufd.c  meson.build  rng-random.c
block/: blkio.c  file-win32.c  io.c  mirror.c  nbd.c  qcow2-cluster.c  qcow2.c  qcow2.h  qed.c  ssh.c  vhdx.c  vpc.c
chardev/: char-pty.c
crypto/: block-luks.c  xts.c
dump/: dump.c
fpu/: softfloat-parts.c.inc  softfloat.c
fsdev/: 9p-iov-marshal.c
gdbstub/: gdbstub.c  meson.build  syscalls.c  system.c
hw/: Kconfig  meson.build
hw/9pfs/: 9p.c
hw/acpi/: acpi-stub.c  aml-build.c  cxl-stub.c  cxl.c  erst.c  generic_event_device.c  pcihp.c  piix4.c  utils.c
hw/arm/: armsse.c  aspeed_ast10x0.c  aspeed_ast2400.c  aspeed_ast2600.c  aspeed_ast27x0.c  aspeed_soc_common.c  boot.c  highbank.c  mps2-tz.c  mps2.c  mps3r.c  musca.c  npcm7xx_boards.c  npcm8xx_boards.c  raspi4b.c  smmuv3-internal.h  smmuv3.c  stellaris.c  virt-acpi-build.c  virt.c  xlnx-versal-virt.c
hw/arm/apple-silicon/: a13.c  a9.c  boot.c  dart.c  dt.c  mem.c  mt-spi.c  patcher.c  s8000.c  sart.c  sep-sim.c  sep.c  t8030.c
hw/audio/: virtio-snd.c
hw/block/: Kconfig  fdc.c  meson.build  pflash_cfi01.c  virtio-blk.c  xen-block.c
hw/block/apple-silicon/: ans.c  nvme_mmu.c
hw/char/: Kconfig  avr_usart.c  diva-gsp.c  goldfish_tty.c  meson.build  sclpconsole-lm.c  sclpconsole.c  serial-pci-multi.c  serial.c  terminal3270.c
hw/core/: cpu-common.c  cpu-system.c  loader.c  machine-hmp-cmds.c  machine-qmp-cmds.c  machine.c  meson.build  numa.c  qdev-properties-system.c  qdev-properties.c  qdev.c  register.c
hw/cxl/: cxl-component-utils.c  cxl-device-utils.c
hw/display/: Kconfig  apple_displaypipe_v2.c  apple_displaypipe_v4.c  apple_scaler.c  cg3.c  meson.build  qxl.c  synopsys_mipi_dsim.c  tcx.c
hw/dma/: Kconfig  apple_sio.c  meson.build
hw/fsi/: aspeed_apb2opb.c
hw/gpio/: Kconfig  apple_gpio.c  meson.build  npcm7xx_gpio.c  nrf51_gpio.c  trace-events
hw/hyperv/: hyperv_testdev.c  syndbg.c  vmbus.c
hw/i2c/: i2c_mux_pca954x.c  meson.build  pmbus_device.c  smbus_eeprom.c
hw/i386/: Kconfig  intel_iommu.c  pc.c  pc_piix.c  pc_q35.c  pc_sysfw_ovmf-stubs.c
hw/i386/kvm/: xenstore_impl.c
hw/ide/: Kconfig  ahci.c  meson.build
hw/input/: Kconfig
hw/intc/: Kconfig  apple_aic.c  arm_gic.c  arm_gicv3_cpuif.c  arm_gicv3_its.c  armv7m_nvic.c  aspeed_intc.c  gic_internal.h  meson.build  rx_icu.c  sh_intc.c  trace-events
hw/mem/: cxl_type3.c  memory-device.c  nvdimm.c
hw/misc/: Kconfig  aspeed_sdmc.c  bcm2835_thermal.c  imx6_ccm.c  imx6ul_ccm.c  iotkit-sysctl.c  lasi.c  meson.build  mos6522.c  npcm7xx_mft.c  npcm7xx_pwm.c  npcm_clk.c  npcm_gcr.c  stm32f4xx_syscfg.c  stm32l4x5_syscfg.c  trace-events  tz-msc.c  tz-ppc.c
hw/misc/apple-silicon/: aes.c  aop.c  baseband.c  mic_tempsensor.c  roswell.c  smc.c  spmi-baseband.c  spmi-pmu.c  tempsensor.c
hw/misc/apple-silicon/a7iop/: regs-v4.c  rtkit.c
hw/misc/apple-silicon/a7iop/mailbox/: core.c  regs-v2.c
hw/net/: cadence_gem.c  e1000e_core.c  ftgmac100.c  i82596.c  igb_core.c  meson.build  net_rx_pkt.c  net_tx_pkt.c  npcm7xx_emc.c  npcm_gmac.c  vhost_net-stub.c  vhost_net.c  virtio-net.c  vmxnet3.c  xilinx_ethlite.c
hw/nvme/: ctrl.c
hw/nvram/: Kconfig  meson.build  nrf51_nvm.c  trace-events
hw/pci/: pci-stub.c
hw/pci-bridge/: pci_bridge_dev.c
hw/pci-host/: Kconfig  apcie.c  gt64120.c  meson.build  trace-events
hw/rtc/: aspeed_rtc.c
hw/scsi/: Kconfig  esp-pci.c  esp.c  meson.build  scsi-disk.c  trace-events  virtio-scsi.c
hw/sd/: sd.c
hw/sensor/: isl_pmbus_vr.c  lsm303dlhc_mag.c
hw/smbios/: smbios-stub.c  smbios_legacy_stub.c
hw/spmi/: apple_spmi.c
hw/ssi/: Kconfig  apple_spi.c  aspeed_smc.c  meson.build  npcm7xx_fiu.c  trace-events  xlnx-versal-ospi.c
hw/timer/: Kconfig  cmsdk-apb-dualtimer.c  meson.build  npcm7xx_timer.c  renesas_tmr.c  trace-events
hw/tpm/: Kconfig  meson.build  trace-events
hw/uefi/: var-service-vars.c
hw/usb/: apple_otg.c  apple_typec.c  dev-mtp.c  dev-tcp-remote.c  hcd-dwc2.c  hcd-dwc3.c  hcd-ehci.c  hcd-tcp.c  host-libusb.c
hw/vfio/: Kconfig  ap.c  container-base.c  container.c  cpr-iommufd.c  cpr-legacy.c  iommufd.c  listener.c  meson.build  migration.c
hw/virtio/: Kconfig  meson.build  trace-events  vhost-stub.c  vhost.c  virtio-balloon.c  virtio-hmp-cmds.c  virtio-mem.c  virtio-qmp.c  virtio-qmp.h  virtio.c
hw/vmapple/: virtio-blk.c  vmapple.c
hw/watchdog/: Kconfig  apple_wdt.c  meson.build  watchdog.c  wdt_i6300esb.c
hw/xen/: xen-backend.c  xen-bus.c  xen-hvm-common.c  xen-mapcache.c  xen-operations.c  xen_stubs.c
io/: channel-socket.c  task.c
migration/: channel-block.c  cpr.c  dirtyrate.c  file.c  migration-hmp-cmds.c  migration.c  page_cache.c  postcopy-ram.c  qemu-file.c  ram.c  rdma.h  xbzrle.c
monitor/: hmp-cmds-target.c  monitor.c  (+2 more)
(+181 files in other folders)
