# Enter target code first to reuse variables associated
subdir('arm')
subdir('xenpv') # i386 uses it
subdir('i386')

subdir('9pfs')
subdir('acpi')
subdir('adc')
subdir('audio')
subdir('block')
subdir('char')
subdir('core')
subdir('cpu')
subdir('cxl')
subdir('display')
subdir('dma')
subdir('gpio')
subdir('hyperv')
subdir('i2c')
subdir('ide')
subdir('input')
subdir('intc')
subdir('ipack')
subdir('ipmi')
subdir('isa')
subdir('mem')
subdir('misc')
subdir('net')
subdir('nubus')
subdir('nvme')
subdir('nvram')
subdir('pci')
subdir('pci-bridge')
subdir('pci-host')
subdir('rtc')
subdir('scsi')
subdir('sd')
subdir('sensor')
subdir('smbios')
subdir('spmi')
subdir('ssi')
subdir('timer')
subdir('tpm')
subdir('uefi')
subdir('ufs')
subdir('usb')
subdir('vfio')
subdir('virtio')
subdir('vmapple')
subdir('watchdog')
subdir('xen')
subdir('fsi')
